--- a/src/assets/css/base.less
+++ b/src/assets/css/base.less
@@ -1,10 +1,12 @@
 // out:false
-body{
-    margin: 0;
-    padding: 0;
+body {
+  margin: 0;
+  padding: 0;
 }
 
-html,body,#app{
-    width: 100%;
-    height: 100%;
+html,
+body,
+#app {
+  width: 100%;
+  height: 100%;
 }
